* Fixed issue with demo_with_images invoice.tex item description (Chris T)
* Display vendor's sku if available on orders and invoices, bug 1218 (Chris T)
* Fixed error unable to delete order (Chris T)
* Fixed bug 1223 prices 0 if selected from parts search (Chris T)
* Fixed issue, cannot log in after creating batch. (Chris T)


Chris T is Chris Travers

Changelog for 1.4.1
* Fixed bug 1205, copy does not copy roles (Chris T)
* Added multi-date inventory uploads (Erik H)
* Fixed bug 1207, date format not displated on preferences (Chris T)
* Fixed bug 1208, username does not appear on menu block (Chris T)
* Fixed bug 1209, Types of Businesses report shows total discounts (Chris T)
* Fixed bug 1210, Cannot list business reporting units (Chris T)
* Fixed bug 1211, Sequences always set to allow input (Chris T)
* Fixed bug 1213, opaque error when no tax form selected on report (Chris T)
* Fixed bug 1214, Company db name not displated on some reports (Chris T)
* Fixed bug 1212, Fixed error regaring no default action (Chris T)
* Fixed bug 1215, duplicate user throws incorrect error (Chris T)
* Fixed bug 1204, Unable to select blank salutation (Chris T)
* Fixed bug 1198, incorrect rewrite rule on Apache 2.4 (Chris T)
* Fixed bug 1217, Link to business units on Business_Unit report was hardcoded (Pongracz I)
* Fixed bug causing COGS dates to be set null (Chris T)

Chris T is Chris Travers
Erik H is Erik Huelsmann
Pongracz I is Pongracz Istvan

Changelog for 1.4.0
General Enhancements:
* Performance enhancements on menu routines (Chris T and Steven M)
* Added +/- selection indicators to menu CSS (Chris T)
* Changing all auth calls to hit postgres db instead of template1 (Chris T)
* invoice.unit is now unbounded varchar to reduce errors (Chris T, 3516235)
* Invoices with inventory subject to draft/vouchers workflows (Chris T)
* Added Equity (Temp) account type, closed at year-end (Chris T)
* Added description field to transaction and invoice screens (Chris T)