@@ -76,12 +76,13 @@
 		<?lsmb INDEX= loop.count ?>
 		  <td>
 			<?lsmb IF displayrow.accnoset == 0 ?>
-              			<?lsmb PROCESS ajaxselect element_data = {
+              			<?lsmb PROCESS input element_data = {
+                                     type = 'text'
 		                     name = "accno_$INDEX"
 		                     initial_value = displayrow.accno
 		                     text_attr = 'accno'
 		                     value_attr = 'accno'
-		                     ajax_target = 'journal.pl'
+                                     class = 'AccountBox'
 		              } ?> 
 			   
 			  <?lsmb ELSE ?>
